@@ -1,3 +1,15 @@
+2009-12-16  Dan Winship  <danw@gnome.org>
+
+        Reviewed by Gustavo Noronha Silva.
+
+        [Gtk] Content-Encoding support
+
+        https://bugs.webkit.org/show_bug.cgi?id=522772
+
+        * platform/network/soup/ResourceHandleSoup.cpp:
+        (WebCore::startHttp): Don't force "Accept-Encoding: identity" any
+        more
+
 2009-12-16  Benjamin Otte  <otte@gnome.org>
 
         Reviewed by Darin Adler.
